--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"autoprefixer": "^10.4.19",
+		"bits-ui": "^0.22.0",
+		"clsx": "^2.1.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.39.3",
-		"flowbite": "^2.3.0",
-		"flowbite-svelte": "^0.44.24",
 		"postcss": "^8.4.38",
 		"postcss-load-config": "^5.1.0",
 		"prettier": "^3.3.2",
@@ -36,6 +36,8 @@
 		"sass": "^1.77.5",
 		"svelte": "^4.2.18",
 		"svelte-check": "^3.8.0",
+		"tailwind-merge": "^3.0.1",
+		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.6.3",
 		"typescript": "^5.4.5",
