--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.44.1",
-		"@sveltejs/adapter-auto": "^3.2.2",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.5.11",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "8.56.0",
@@ -45,5 +45,8 @@
 	"type": "module",
 	"dependencies": {
 		"axios": "^1.7.2"
+	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "^4.40.0"
 	}
 }
