--- a/package.json
+++ b/package.json
@@ -17,29 +17,30 @@
 	"devDependencies": {
 		"@playwright/test": "^1.44.1",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.5.11",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@sveltejs/kit": "^2.5.27",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "8.56.0",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.39.3",
+		"eslint-plugin-svelte": "^2.45.1",
 		"flowbite": "^2.3.0",
 		"flowbite-svelte": "^0.44.24",
 		"postcss": "^8.4.38",
 		"postcss-load-config": "^5.1.0",
 		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.2.4",
+		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.5.14",
 		"sass": "^1.77.5",
-		"svelte": "^4.2.18",
-		"svelte-check": "^3.8.0",
+		"svelte": "^5.34.7",
+		"svelte-check": "^4.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.6.3",
-		"typescript": "^5.4.5",
-		"vite": "^5.3.0",
+		"typescript": "^5.5.0",
+		"vite": "^5.4.4",
 		"vitest": "^1.6.0"
 	},
 	"type": "module",
