--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write . && eslint --fix .",
-		"test:integration": "playwright test",
+		"test:e2e": "playwright test",
+		"test:e2e:headed": "playwright test --headed",
+		"test:e2e:headed:chrome": "playwright test --headed --project=chromium",
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
