--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.5.11",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@testing-library/svelte": "^5.2.8",
 		"@types/eslint": "8.56.0",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
@@ -30,6 +31,7 @@
 		"eslint-plugin-svelte": "^2.39.3",
 		"flowbite": "^2.3.0",
 		"flowbite-svelte": "^0.44.24",
+		"jsdom": "^26.1.0",
 		"postcss": "^8.4.38",
 		"postcss-load-config": "^5.1.0",
 		"prettier": "^3.3.2",
